# FNF-Spritesheet-XML-generator-Web

./: LICENSE  README.md  index.html
rust-img-lib/: Cargo.toml  Cargo.toml.d.ts  LICENSE_MIT
rust-img-lib/src/: algorithms.rs  lib.rs  textureatlas_format.rs  utils.rs
rust-img-lib/src/algorithms/: iconpacker.rs  spritesheetpackers.rs
rust-img-lib/src/algorithms/spritesheetpackers/: growingpacker.rs
svelte-frontend/: package-lock.json  package.json  rollup.config.js
svelte-frontend/src/: App.svelte  animationcontroller.ts  b64utils.ts  global.d.ts  main.ts  spriteframedata.ts  stores.ts  styles.css  utils.ts
svelte-frontend/src/components/: AnimationView.svelte  AppTab.svelte  DropUpMenu.svelte  Modal.svelte  RubberBandSelector.svelte  SettingsModal.svelte  SpriteFrame.svelte  SpritesheetGenControls.svelte  XMLTableView.svelte
svelte-frontend/src/tabs/: IcongridGenerator.svelte  SpritesheetGenerator.svelte
