[package]
name = "rust-img-lib"
version = "0.1.0"
authors = ["UncertainProd"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

web-sys = "0.3.61"
image = "0.24.6"
base64 = "0.21.0"
js-sys = "0.3.61"
zip = { version = "0.6.6", default-features = false, features = [ "deflate" ] }
quick-xml = "0.28.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto=true
